gateway/1.13/modules/ROOT/pages/troubleshoot-linux-permissions.adoc
= Troubleshooting Linux Permissions
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-aliases: flex-troubleshoot-linux-permissions.adoc

To help limit access to information about an Omni Gateway, the following `flexctl` commands can be executed on Linux deployments only by the root user and by users in the `flex` user group:

* `flexctl dump`
* `flexctl version`
* `flexctl check connections`
* `flexctl probe`
* `flexctl registration inspect` (when executed without the `--file` flag)

There are two options to execute these commands:

* <<add-user-to-flex-group>>
* <<run-as-root-user>>

[[add-user-to-flex-group]]
== Add the User to the flex User Group

Adding a user to the `flex` user group is a permanent solution and requires no action after the user is added. Execute the following command to add the current user to the `flex` user group:

[source,ssh]
----
sudo usermod -a -G flex $USER
----

After running the command, the user must log in to the VM again to begin using the `flexctl` commands.

[[run-as-root-user]]
== Run as the Root User

Executing the `sudo` command with your `flexctl` command is the quickest way to access Omni Gateway information. However, you must execute the `sudo` command every time you run a `flexctl` command if the user is not part of the `flex` user group:

[source,ssh]
----
sudo flexctl <command>
----

When the `sudo flexctl dump` command is executed, the root user is the owner of the created dump files. If the current user is not the root user, the user cannot view the dumped files. To view the files, execute the following command to change the owner of the files:

[source,ssh]
----
sudo chown $USER *.json
----

[[minimum-file-system-permissions]]
== Minimum File System Permissions

Omni Gateway requires specific file system permissions for proper operation. The following directories and files must have the appropriate permissions:

=== Configuration Files

Files in the `conf.d` directory must have `644` permissions, allowing the owner to read and write, and the group and others to read:

[source,ssh]
----
chmod 644 /etc/mulesoft/flex-gateway/conf.d/*
----

=== Runtime Directory

The `/var/tmp/mulesoft/flex-gateway/` directory must be owned by the `flex` user and group with a minimum of `770` permissions, allowing the owner and group to read, write, and execute:

[source,ssh]
----
sudo chown -R flex:flex /var/tmp/mulesoft/flex-gateway/
sudo chmod -R 770 /var/tmp/mulesoft/flex-gateway/
----

These permissions ensure that:

* Configuration files can be read by the gateway but are protected from unauthorized modification
* The runtime directory is accessible only to the `flex` user and group members
* Support can properly troubleshoot permission-related issues

== See Also

* xref:troubleshoot-admin-api.adoc[]
include::release-notes::partial$release-notes/rn-known-issues.adoc[tag=knownIssuesSeeAlsoLink]
